kubernetes-gitops/play_with_flagger/deploy/istio/frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: shop
spec:
  hosts:
  - "*"
  gateways:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
